Fix wrapping of Map Legend Heading Text
Summary:
Currently map legend heading wraps around the Add Button.
Fix this by add {display: inline} rule to MapLegend heading element.

{F4033}

Test Plan:
Go to universeDetail page.
The map legend headings should not wrap around the button

Reviewers: ram, jeff

Reviewed By: jeff

Subscribers: jenkins-bot, sid, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D2453

--- a/managed/ui/src/components/maps/stylesheets/YBMapLegendItem.scss
+++ b/managed/ui/src/components/maps/stylesheets/YBMapLegendItem.scss
@@ -4,3 +4,8 @@
     width: 30px;
     height: 30px;
 }
+
+.map-legend-heading {
+    display: inline;
+    padding: 0px 4px;
+}
